- created queueRequest to finish responding to a delayed request
- create response example in examples.py
- create response method in exampleServer in examples.py
- added support for file logging object (thanks to Ross Brattain)
- added buildCall, parseCall to help support pyxmlrpclib
- added pyxmlrpclib.py for drop-in compatibility w/ xmlrpclib

Internal
--------
- used buffConstant for appending constant length strings in rpcUtils.c
(thanks to Christian Gafton).  This speeds things up by 20% in many cases.
- Fixed signed/unsigned problem and a 64 bit problem that could lead to
weird bugs.  Thanks to Marcin Cieslak for the patch.
- Fixed windows server typo bug that lead to "No such file or directory"
in bindAndListen.
- Fixed off-by-one bug in parsing entities starting with '&#'


Version 0.8.8.2
=============
Internal
--------
Fixed segfault bug in rpcFaultClass() by removing extra method++.


Version 0.8.8.1
=============
Internal
--------
Diagnosed segfault bug incorrectly as a linking bug.  Hid it instead of
fixing it.


Version 0.8.8
=============

Public
------
- Added support for chunked encoding (thanks to Tommi Virtanen)
- Added support for US / European date formats (per Jesus's request)
- Added type objects in xmlrpc.py (per Grahams's request)
- Added support for type objects (per Grahams's request)
- Added sane repr and str object representations (per Grahams's request)
- Added fault object so faultCode and faultString can be extracted when
errors occur.

Internal
--------
- Fixed several segfault problems (Thanks to Troels Hansen)
- Fixed several minor bugs with error handling (Thanks to Troels Hansen)
- HTTP headers should not be case sensitive any longer
- Added patch to catch xmlrpc exceptions
- Added support for not up-to-spec use of "\n" instead of "\r\n" in
headers - Note that this is not supported yet in chunked encoding.



Version 0.8.7
=============

Public:
-------
- added server.setAuth() function